--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -305,6 +305,8 @@ jobs:
    push-to-registry:
      runs-on: ubuntu-20.04
      steps:
+       - name: Checkout
+         uses: actions/checkout@v2
        - name: Login to Github Container registry
          uses: docker/login-action@v1
          # You may need to manage write and read access of (GitHub Actions for repositories) [https://docs.github.com/en/packages/managing-github-packages-using-github-actions-workflows/publishing-and-installing-a-package-with-github-actions#upgrading-a-workflow-that-accesses-ghcrio]
