--- a/package.json
+++ b/package.json
@@ -124,6 +124,10 @@
     "luxon": "^2.0.2",
     "nedb": "^1.8.0",
     "polished": "^4.1.3",
+    "prosemirror-model": "^1.18.1",
+    "prosemirror-state": "^1.4.2",
+    "prosemirror-transform": "^1.7.0",
+    "prosemirror-view": "^1.29.0",
     "react": "17.0.1",
     "react-codemirror2": "^7.2.1",
     "react-colorful": "^5.4.0",
